Fix package-provider tests